// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.rich-text-editor.spell-check-plugin > Partial word tests > Input snapshot for popular cases 1`] = `
HTMLCollection [
  <p
    class="editor-paragraph ltr"
    dir="ltr"
  >
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
      s s
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
       s
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
      x 
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
       
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      javescript
    </span>
    <span
      data-lexical-text="true"
    >
       
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developrr
    </span>
    <span
      data-lexical-text="true"
    >
       .
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
      . 
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
      _
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
       ,
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
      , ;
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
      ; :
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      javescript
    </span>
    <span
      data-lexical-text="true"
    >
      : 'javecript' "
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      javescript
    </span>
    <span
      data-lexical-text="true"
    >
      " (
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developrr
    </span>
    <span
      data-lexical-text="true"
    >
      ) [
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developrr
    </span>
    <span
      data-lexical-text="true"
    >
      ] {
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developrr
    </span>
    <span
      data-lexical-text="true"
    >
      } &lt;
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      javescript
    </span>
    <span
      data-lexical-text="true"
    >
      &gt;
    </span>
  </p>,
]
`;

exports[`com.mgmtp.a12.widgets.rich-text-editor.spell-check-plugin > Whole word tests > Input snapshot for popular cases 1`] = `
HTMLCollection [
  <p
    class="editor-paragraph ltr"
    dir="ltr"
  >
    <span
      data-lexical-text="true"
    >
      developrs sdevelopr sdeveloprx 
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
       
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      javescript
    </span>
    <span
      data-lexical-text="true"
    >
       
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developrr
    </span>
    <span
      data-lexical-text="true"
    >
       .
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
      . developr_developr ,
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
      , ;
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developr
    </span>
    <span
      data-lexical-text="true"
    >
      ; :
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      javescript
    </span>
    <span
      data-lexical-text="true"
    >
      : 'javecript' "
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      javescript
    </span>
    <span
      data-lexical-text="true"
    >
      " (
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developrr
    </span>
    <span
      data-lexical-text="true"
    >
      ) [
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developrr
    </span>
    <span
      data-lexical-text="true"
    >
      ] {
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      developrr
    </span>
    <span
      data-lexical-text="true"
    >
      } &lt;
    </span>
    <span
      class="editor-misspelled-word"
      data-lexical-text="true"
    >
      javescript
    </span>
    <span
      data-lexical-text="true"
    >
      &gt;
    </span>
  </p>,
]
`;
